--- a/src/components/StatsPopUp/StatsPopUp.module.scss
+++ b/src/components/StatsPopUp/StatsPopUp.module.scss
@@ -5,7 +5,8 @@
     left: 33.75%;
     width: 32.5%;
     //height: 61.5%;
-    height: fit-content;
+    //height: fit-content;
+    height: 70%;
     padding: 2rem 0;
     border: 1px solid var(--popup-border-color);
     background-color: var(--popup-bg-color);
