--- a/src/App.scss
+++ b/src/App.scss
@@ -93,7 +93,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    gap: 2.75rem;
+    //gap: 2.75rem;
     background-color: var(--app-bg-color);
 }
 
@@ -102,13 +102,15 @@ body {
 .main_container {
     position: relative;
     width: 100%;
+    height: 100%;
 
     .game_container {
+        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        gap: 2.75rem;
+        //gap: 2.75rem;
 
         .gameboard_container {
             display: flex;
@@ -116,6 +118,7 @@ body {
             align-items: center;
             justify-content: center;
             gap: .35rem;
+            padding-top: 2.75rem;
         }
 
         .keyboard_container {
@@ -123,6 +126,7 @@ body {
             flex-direction: column;
             align-items: center;
             gap: .5rem;
+            padding-bottom: .5rem;
         }
     }
 
