Add responsiveness to some app components
- Add responsiveness for smartphone portrait screens to the following components: Navbar, KeyboardRow, Line and SettingsPopUp

--- a/src/components/Line/Line.module.scss
+++ b/src/components/Line/Line.module.scss
@@ -1,3 +1,4 @@
+// Gameboard content
 .tile_row {
     display: flex;
     gap: .35rem;
@@ -212,3 +213,6 @@
         }
     }
 }
+
+
+@import './media';
