--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,3 +1,4 @@
+// Navbar content
 .navbar_container {
     color: var(--header-color);
     display: flex;
@@ -33,5 +34,6 @@
         }
     }
 }
+
 
 @import './media.scss'
