--- a/src/components/HelpPopUp/HelpPopUp.module.scss
+++ b/src/components/HelpPopUp/HelpPopUp.module.scss
@@ -15,17 +15,19 @@
     box-shadow: 0 0 10px 1000px var(--popup-box-shadow-color);
     border-radius: .5rem;
     padding: 2rem;
-    
+
     @keyframes slideIn {
         0% {
             translate: 0 7.5%;
             opacity: 0;
-        }   
+        }
+
         100% {
             translate: 0 0;
             opacity: 1;
         }
     }
+
     animation: slideIn .2s ease 0s;
 
     .help_popup_title {
@@ -71,136 +73,148 @@
             font-weight: bold;
         }
 
-        .help_popup_example_item {
+        .help_popup_example_items_container {
             display: flex;
             flex-direction: column;
-            align-items: flex-start;
-            justify-content: flex-start;
             gap: .5rem;
-            padding-bottom: .75rem;
 
-            .help_popup_example_tiles {
+            .help_popup_example_item {
                 display: flex;
+                flex-direction: column;
                 align-items: flex-start;
                 justify-content: flex-start;
-                gap: .25rem;
+                gap: .5rem;
+                padding-bottom: .75rem;
 
-                .popup_example_tile {
-                    background-color: var(--app-bg-color);
-                    width: 2rem;
-                    height: 2rem;
+                .help_popup_example_tiles {
                     display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    text-transform: uppercase;
-                    font-size: 1.6rem;
-                    border: .1rem solid var(--tile-hightlighted-border-color);
-                    font-weight: bold;
-                    transition: all .05s ease-in-out;
+                    align-items: flex-start;
+                    justify-content: flex-start;
+                    gap: .25rem;
+
+                    .popup_example_tile {
+                        background-color: var(--app-bg-color);
+                        width: 2rem;
+                        height: 2rem;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        text-transform: uppercase;
+                        font-size: 1.6rem;
+                        border: .1rem solid var(--tile-hightlighted-border-color);
+                        font-weight: bold;
+                        transition: all .05s ease-in-out;
+                        color: var(--keyboard-letter-text-color);
+
+                        @keyframes flipHelpTile {
+                            0% {
+                                rotate: x 0deg;
+                            }
+
+                            47.5% {
+                                rotate: x 90deg;
+                            }
+
+                            52.5% {
+                                rotate: x 90deg;
+                            }
+
+                            100% {
+                                rotate: x 0deg;
+                                border: none;
+                                color: var(--tile-text-color);
+                            }
+                        }
+
+                        &.popup_example_tile_green {
+                            @keyframes turnHelpTileToGreen {
+                                0% {
+                                    background-color: var(--app-bg-color);
+                                }
+
+                                25% {
+                                    background-color: var(--app-bg-color);
+                                }
+
+                                50% {
+                                    background-color: var(--tile-correct-color);
+                                }
+
+                                100% {
+                                    background-color: var(--tile-correct-color);
+                                }
+                            }
+
+                            animation: flipHelpTile .6s ease-in-out,
+                            turnHelpTileToGreen .85s ease-in-out;
+                            animation-fill-mode: forwards;
+                        }
+
+                        &.popup_example_tile_yellow {
+                            @keyframes turnHelpTileToYellow {
+                                0% {
+                                    background-color: var(--app-bg-color);
+                                }
+
+                                25% {
+                                    background-color: var(--app-bg-color);
+                                }
+
+                                50% {
+                                    background-color: var(--tile-present-color);
+                                }
+
+                                100% {
+                                    background-color: var(--tile-present-color);
+                                }
+                            }
+
+                            animation: flipHelpTile .6s ease-in-out,
+                            turnHelpTileToYellow .85s ease-in-out;
+                            animation-fill-mode: forwards;
+                        }
+
+                        &.popup_example_tile_grey {
+                            @keyframes turnHelpTileToGrey {
+                                0% {
+                                    background-color: var(--app-bg-color);
+                                }
+
+                                25% {
+                                    background-color: var(--app-bg-color);
+                                }
+
+                                50% {
+                                    background-color: var(--tile-wrong-color);
+                                    color: var(--keyboard-letter-checked-color);
+                                }
+
+                                100% {
+                                    background-color: var(--tile-wrong-color);
+                                    color: var(--keyboard-letter-checked-color);
+                                }
+                            }
+
+                            animation: flipHelpTile .6s ease-in-out,
+                            turnHelpTileToGrey .85s ease-in-out;
+                            animation-fill-mode: forwards;
+                        }
+
+                        .popup_example_letter {
+                            margin: 0;
+                        }
+                    }
+                }
+
+                &>p {
+                    span {
+                        font-size: 1.05rem;
+                        font-weight: bold;
+                    }
+
+                    margin: 0;
                     color: var(--keyboard-letter-text-color);
-
-                    @keyframes flipHelpTile {
-                        0% {
-                            rotate: x 0deg;
-                        }
-            
-                        47.5% {
-                            rotate: x 90deg;
-                        }
-            
-                        52.5% {
-                            rotate: x 90deg;
-                        }
-            
-                        100% {
-                            rotate: x 0deg;
-                            border: none;
-                            color: var(--tile-text-color);
-                        }
-                    }
-            
-                    &.popup_example_tile_green {
-                        @keyframes turnHelpTileToGreen {
-                            0% {
-                                background-color: var(--app-bg-color);
-                            }
-            
-                            25% {
-                                background-color: var(--app-bg-color);
-                            }
-            
-                            50% {
-                                background-color: var(--tile-correct-color);
-                            }
-            
-                            100% {
-                                background-color: var(--tile-correct-color);
-                            }
-                        }
-                        animation: flipHelpTile .6s ease-in-out, turnHelpTileToGreen .85s ease-in-out;
-                        animation-fill-mode: forwards;
-                    }
-            
-                    &.popup_example_tile_yellow {
-                        @keyframes turnHelpTileToYellow {
-                            0% {
-                                background-color: var(--app-bg-color);
-                            }
-            
-                            25% {
-                                background-color: var(--app-bg-color);
-                            }
-            
-                            50% {
-                                background-color: var(--tile-present-color);
-                            }
-            
-                            100% {
-                                background-color: var(--tile-present-color);
-                            }
-                        }
-                        animation: flipHelpTile .6s ease-in-out, turnHelpTileToYellow .85s ease-in-out;
-                        animation-fill-mode: forwards;
-                    }
-            
-                    &.popup_example_tile_grey {
-                        @keyframes turnHelpTileToGrey {
-                            0% {
-                                background-color: var(--app-bg-color);
-                            }
-            
-                            25% {
-                                background-color: var(--app-bg-color);
-                            }
-            
-                            50% {
-                                background-color: var(--tile-wrong-color);
-                                color: var(--keyboard-letter-checked-color);
-                            }
-            
-                            100% {
-                                background-color: var(--tile-wrong-color);
-                                color: var(--keyboard-letter-checked-color);
-                            }
-                        }
-                        animation: flipHelpTile .6s ease-in-out, turnHelpTileToGrey .85s ease-in-out;
-                        animation-fill-mode: forwards;
-                    }
-
-                    .popup_example_letter {
-                        margin: 0;
-                    }
                 }
-            }
-
-            &>p {
-                span {
-                    font-size: 1.05rem;
-                    font-weight: bold;
-                }
-
-                margin: 0;
-                color: var(--keyboard-letter-text-color);
             }
         }
     }
@@ -216,18 +230,20 @@
         cursor: pointer;
     }
 
-    &.help_popup_container_hide { 
-        
+    &.help_popup_container_hide {
+
         @keyframes slideOut {
             0% {
                 translate: 0 0;
                 opacity: 1;
-            }   
+            }
+
             100% {
                 translate: 0 7.5%;
                 opacity: 0;
             }
         }
+
         animation: slideOut .2s ease 0s;
         animation-fill-mode: forwards;
     }
@@ -249,3 +265,6 @@
 .help_pop_up_hidden {
     display: none;
 }
+
+
+@import './media';
