--- a/src/components/Line/_media.scss
+++ b/src/components/Line/_media.scss
@@ -5,8 +5,33 @@
     .tile_row {
         display: flex;
         gap: .2rem;
+        width: 100%;
+        justify-content: center;
 
-        // .tile {
+        .tile {
+
+            @keyframes flipBoardTile {
+                0% {
+                    rotate: x 0deg;
+                }
+
+                47.5% {
+                    rotate: x 90deg;
+                }
+
+                52.5% {
+                    rotate: x 90deg;
+                }
+
+                100% {
+                    rotate: x 0deg;
+                    border: .1rem solid transparent;
+                    color: var(--tile-text-color);
+                }
+            }
+
+        }
+
         //     // background-color: var(--app-bg-color);
         //     // width: 3.85rem;
         //     // height: 3.85rem;
@@ -215,5 +240,42 @@
         //     //     animation-fill-mode: forwards;
         //     // }
         // }
+    }
+}
+
+
+// Media queries for mobile content (landscape)
+@media screen and (max-height: 650px) and (min-width: 501px) and (max-width: 1000px) {
+
+    // Gameboard content
+    .tile_row {
+        display: flex;
+        gap: .2rem;
+        width: 40%;
+        justify-content: center;
+
+        .tile {
+
+            @keyframes flipBoardTile {
+                0% {
+                    rotate: x 0deg;
+                }
+
+                47.5% {
+                    rotate: x 90deg;
+                }
+
+                52.5% {
+                    rotate: x 90deg;
+                }
+
+                100% {
+                    rotate: x 0deg;
+                    border: .1rem solid transparent;
+                    color: var(--tile-text-color);
+                }
+            }
+
+        }
     }
 }
