--- a/src/components/SettingsPopUp/SettingsPopUp.module.scss
+++ b/src/components/SettingsPopUp/SettingsPopUp.module.scss
@@ -160,6 +160,48 @@
                         left: 0;
                         width: 100%;
                         height: 100%;
+                        z-index: 1;
+                    }
+
+                    &::after {
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        width: 100%;
+                        overflow-y: hidden;
+                        text-overflow: ellipsis;
+                        word-wrap: break-word;
+                        font-size: .65rem;
+                        line-height: .7rem;
+                        padding: .25rem; 
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        text-align: center;
+                        background-color: var(--popup-text-description-color);
+                        color: var(--keyboard-letter-text-color);
+                        border-radius: .25rem;
+                        translate: -80% 0;
+                        transition: all .2s ease-in-out;
+                        opacity: 0;
+                    }
+
+                    &.singular_setting_toggler_word_length::after {
+                        content: 'Word API unavailable';
+                        height: 80%;
+                    }
+
+                    &.singular_setting_toggler_lazy_mode::after {
+                        content: 'Dictionary API unavailable';
+                        translate: -50% 0;
+                        height: 120%;
+                    }
+
+                    &:hover {
+
+                        &::after {
+                            opacity: 1;
+                        }
                     }
                 }
             }
