--- a/src/App.scss
+++ b/src/App.scss
@@ -88,7 +88,7 @@ body {
 // App content
 .app_container {
     width: 100vw;
-    height: 100vh;
+    //height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
