--- a/src/App.scss
+++ b/src/App.scss
@@ -89,6 +89,8 @@ body {
 .app_container {
     width: 100vw;
     //height: 100vh;
+    max-height: 100vh;
+
     display: flex;
     flex-direction: column;
     align-items: center;
