Improve responsiveness for mobile landscape screen
- Add fullscreen button element and logic for mobile landscape screens
- Update app's title
- Fix styling slightly for all screens
- Improve styling for mobile landscape screens
- Improve key click logic to prevent browser search suggestions on mobile browsers
- Add help suggestion pop up for toggling full screen
- Fix bug where words could contain "-"

--- a/src/components/FooterDescription/_media.scss
+++ b/src/components/FooterDescription/_media.scss
@@ -95,13 +95,13 @@
     .footer_container {
         // width: 100%;
         // color: var(--popup-text-description-color);
-        padding: 1rem .25rem .65rem 0rem;
+        padding: .75rem .25rem .5rem 0rem;
         // display: flex;
         // align-items: flex-start;
         // justify-content: center;
         // flex-direction: column;
         gap: .4rem;
-        font-size: .65rem;
+        font-size: .6rem;
 
         // .footer_api_description {
 
@@ -137,7 +137,7 @@
                     // margin: 0;
                     letter-spacing: .015rem;
                     word-spacing: .025rem;
-                    font-size: .65rem;
+                    font-size: .6rem;
                     // color: var(--popup-text-description-color);
                 }
             }
