--- a/src/components/SettingsPopUp/_media.scss
+++ b/src/components/SettingsPopUp/_media.scss
@@ -297,8 +297,8 @@
         height: fit-content;
         //height: 90%;
         justify-content: center;
-        gap: 1.75rem;
-        padding: 1rem 0;
+        gap: 1.25rem;
+        padding: .9rem 0;
         
 
         // border: 1px solid var(--popup-border-color);
