--- a/src/_media.scss
+++ b/src/_media.scss
@@ -162,8 +162,89 @@
 @media screen and (max-width: 500px) and (max-height: 500px) {}
 
 
+// Media queries for mobile content (landscape low height)
+@media screen and (max-height: 351px) and (min-width: 501px) and (max-width: 1000px) {
+
+    // Main content
+    .main_container {
+        // position: relative;
+        // width: 100%;
+        // height: 100%;
+        //height: 87.5%;
+
+        .game_container {
+            // height: 100%;
+            // display: flex;
+            // flex-direction: column;
+            // align-items: center;
+            // justify-content: space-between;
+            //gap: 2.75rem;
+            width: 100%;
+            padding: .2rem;
+
+            .gameboard_container {
+                // display: flex;
+                //flex-direction: row;
+                flex-wrap: wrap;
+                // align-items: center;
+                // justify-content: center;
+
+                gap: .2rem 2rem;
+                width: 100%;
+                //padding-top: 2.75rem;
+                padding: .15rem;
+                //height: 72.5%;
+                padding-top: .5rem;
+            }
+
+            .keyboard_container {
+                // display: flex;
+                // flex-direction: column;
+                // align-items: center;
+                gap: .2rem;
+                width: 100%;
+                padding-bottom: .15rem;
+            }
+        }
+
+
+        .notification_container {
+            // position: absolute;
+            top: 2.5%;
+            // left: 50%;
+            // translate: -50% 0;
+            padding: .25rem .5rem;
+            // background-color: var(--notification-bg-color);
+            // color: var(--notification-color);
+            // box-shadow: 0 0 .5rem var(--notification-box-shadow-color);
+            // border-radius: .25rem;
+            //width: fit-content;
+            font-size: .7rem;
+            // z-index: 4;
+        }
+
+
+        .reset_game_button {
+            // position: absolute;
+            top: 70%;
+            right: 10%;
+            translate: 50% 0;
+            // opacity: 0;
+            // background-color: var(--tile-present-color);
+            // color: var(--popup-bg-color);
+            // border: 0.05rem solid var(--popup-text-description-color);
+            font-size: 0.65rem;
+            // border-radius: 0.25rem;
+            // font-weight: bold;
+            padding: 0.25rem .65rem;
+            // cursor: pointer;
+        }
+    }
+}
+
+
 // Media queries for mobile content (landscape)
-@media screen and (max-height: 650px) and (min-width: 501px) and (max-width: 1000px) {
+@media screen and (min-height: 351px) and (max-height: 650px) and (min-width: 501px) and (max-width: 1000px) {
 
     // Main content
     .main_container {
