--- a/src/components/ExtraMenu/_media.scss
+++ b/src/components/ExtraMenu/_media.scss
@@ -172,7 +172,7 @@
         gap: 0rem;
         // box-shadow: 3px 5px 5px var(--extra-menu-box-shadow-color);
         // border-radius: .5rem;
-        padding-top: 1.5rem;
+        padding-top: 1.15rem;
 
 
         // border: 1px solid var(--popup-border-color);
@@ -207,7 +207,7 @@
             // flex-direction: column;
             // align-items: flex-start;
             // justify-content: center;
-            gap: 1rem;
+            gap: .75rem;
             padding-bottom: 0rem;
 
             .extramenu_popup_games_item {
@@ -222,13 +222,13 @@
                 // }
 
                 &:nth-child(2) {
-                    padding-top: .25rem;
+                    padding-top: .15rem;
                 }
 
                 &>h6 {
                     // font-weight: bold;
                     // text-transform: uppercase;
-                    font-size: .625rem;
+                    font-size: .575rem;
                     margin: 0;
                     padding: 0 1rem 0 1rem;
                 }
@@ -241,7 +241,7 @@
                     gap: .5rem;
                     // transition: all .1s ease-in-out;
                     // cursor: pointer;
-                    padding: .75rem 1rem .75rem 1rem;
+                    padding: .5rem 1rem .5rem 1rem;
                     border-radius: .15rem;
                     margin-bottom: .25rem;
 
@@ -252,13 +252,13 @@
                         width: 8%;
 
                         i {
-                            font-size: 1rem;
+                            font-size: .95rem;
                             // color: var(--tile-correct-color);
                         }
                     }
 
                     &>p {
-                        font-size: .825rem;
+                        font-size: .775rem;
                         // margin: 0;
                         letter-spacing: .015rem;
                     }
@@ -283,7 +283,7 @@
             // position: absolute;
             // top: 3.15%;
             // right: 3%;
-            font-size: 1.05rem;
+            font-size: 1rem;
             // background-color: var(--popup-bg-color);
             // color: var(--keyboard-letter-text-color);
             // border: none;
