--- a/src/components/Line/_media.scss
+++ b/src/components/Line/_media.scss
@@ -244,8 +244,45 @@
 }
 
 
+// Media queries for mobile content (landscape low height)
+@media screen and (max-height: 351px) and (min-width: 501px) and (max-width: 1000px) {
+
+     // Gameboard content
+     .tile_row {
+        display: flex;
+        gap: .175rem;
+        width: 40%;
+        justify-content: center;
+
+        .tile {
+
+            @keyframes flipBoardTile {
+                0% {
+                    rotate: x 0deg;
+                }
+
+                47.5% {
+                    rotate: x 90deg;
+                }
+
+                52.5% {
+                    rotate: x 90deg;
+                }
+
+                100% {
+                    rotate: x 0deg;
+                    border: .1rem solid transparent;
+                    color: var(--tile-text-color);
+                }
+            }
+
+        }
+    }
+}
+
+
 // Media queries for mobile content (landscape)
-@media screen and (max-height: 650px) and (min-width: 501px) and (max-width: 1000px) {
+@media screen and (min-height: 351px) and (max-height: 650px) and (min-width: 501px) and (max-width: 1000px) {
 
     // Gameboard content
     .tile_row {
