--- a/src/components/StatsPopUp/_media.scss
+++ b/src/components/StatsPopUp/_media.scss
@@ -204,11 +204,11 @@
          left: 10%;
          width: 80%;
          //height: 75%;
-         //height: fit-content;
-         height: 90%;
+         height: fit-content;
+         //height: 90%;
          justify-content: center;
-         gap: 1.75rem;
-         padding: 1rem 0;
+         gap: 1.25rem;
+         padding: .9rem 0 .5rem 0;
 
 
         // height: 70%;
@@ -243,7 +243,7 @@
             // flex-direction: column;
             // align-items: center;
             // justify-content: center;
-            gap: 1rem;
+            gap: .85rem;
             // width: 100%;
             padding: 0 .75rem;
             // color: var(--keyboard-letter-text-color);
@@ -262,7 +262,7 @@
                 // align-items: flex-start;
                 // justify-content: center;
                 // width: 100%;
-                gap: .5rem;
+                gap: .25rem;
 
                 .singular_stat_container {
                     // display: flex;
@@ -273,7 +273,7 @@
 
 
                     .singular_stat_number {
-                        font-size: 1.35rem;
+                        font-size: 1.175rem;
                         // font-weight: 400;
                         // margin: 0;
                     }
@@ -281,7 +281,7 @@
                     .singular_stat_text {
                         // margin: 0;
                         // text-align: center;
-                        font-size: .65rem;
+                        font-size: .575rem;
                         line-height: .75rem;
                     }
                 }
@@ -295,7 +295,7 @@
             // justify-content: center;
             // width: 100%;
             //height: 57.5%;
-            gap: 1rem;
+            gap: .85rem;
             padding: 0 1rem;
             // color: var(--keyboard-letter-text-color);
 
@@ -315,14 +315,14 @@
                 flex-wrap: wrap;
                 align-items: center;
                 justify-content: space-evenly;
-                gap: .275rem;
+                gap: .175rem;
                 // width: 100%;
 
                 .singular_graph_line_container {
                     // display: flex;
                     // align-items: center;
                     // justify-content: flex-start;
-                     gap: .3rem;
+                    gap: .3rem;
                     width: 40%;
                     //height: 12.5%;
 
