--- a/src/_media.scss
+++ b/src/_media.scss
@@ -1,4 +1,4 @@
-// Media query for mobile content (portrait)
+// Media query for mobile content (portrait low height)
 @media screen and (max-width: 500px) and (min-height: 501px) {
 
     // App content
@@ -97,8 +97,10 @@
 
         .reset_game_button {
             // position: absolute;
-            top: 67.5%;
-            right: 50%;
+            //top: 67.5%;
+            //right: 50%;
+            top: 59%;
+            right: 15%;
             translate: 50% 0;
             // opacity: 0;
             // background-color: var(--tile-present-color);
@@ -158,12 +160,117 @@
 }
 
 
+// Media query for mobile content (portrait)
+@media screen and (max-width: 500px) and (min-height: 625px) {
+
+    // Main content
+    .main_container {
+        // position: relative;
+        // width: 100%;
+        // height: 100%;
+
+        // .game_container {
+        //     // height: 100%;
+        //     // display: flex;
+        //     // flex-direction: column;
+        //     // align-items: center;
+        //     // justify-content: space-between;
+        //     //gap: 2.75rem;
+        //     width: 100%;
+        //     padding: .35rem;
+
+        //     .gameboard_container {
+        //         // display: flex;
+        //         // flex-direction: column;
+        //         // align-items: center;
+        //         // justify-content: center;
+        //         gap: .25rem;
+        //         width: 100%;
+        //         //padding-top: 2.75rem;
+        //         padding: .25rem;
+
+        //         padding-top: 1.75rem;
+        //     }
+
+        //     .keyboard_container {
+        //         // display: flex;
+        //         // flex-direction: column;
+        //         // align-items: center;
+        //         gap: .35rem;
+        //         width: 100%;
+        //         // padding-bottom: .5rem;
+        //     }
+        // }
+
+
+        // .notification_container {
+        //     // position: absolute;
+        //     top: .5%;
+        //     // left: 50%;
+        //     // translate: -50% 0;
+        //     padding: .5rem .75rem;
+        //     // background-color: var(--notification-bg-color);
+        //     // color: var(--notification-color);
+        //     // box-shadow: 0 0 .5rem var(--notification-box-shadow-color);
+        //     // border-radius: .25rem;
+        //     //width: fit-content;
+        //     font-size: .8rem;
+        //     // z-index: 4;
+
+        //     // @keyframes popInAndOut {
+        //     //     0% {
+        //     //         opacity: .25;
+        //     //     }
+
+        //     //     25% {
+        //     //         opacity: 1;
+        //     //     }
+
+        //     //     75% {
+        //     //         opacity: 1;
+        //     //     }
+
+        //     //     100% {
+        //     //         opacity: 0;
+        //     //     }
+        //     // }
+
+        //     // animation: popInAndOut 3s ease 0s;
+        //     // animation-fill-mode: forwards;
+
+
+        //     // &.notification_container_invisible {
+        //     //     display: none;
+        //     // }
+        // }
+
+        .reset_game_button {
+            // position: absolute;
+            //top: 67.5%;
+            //right: 50%;
+            top: 67.5%;
+            right: 15%;
+            //translate: 50% 0;
+            // opacity: 0;
+            // background-color: var(--tile-present-color);
+            // color: var(--popup-bg-color);
+            // border: 0.05rem solid var(--popup-text-description-color);
+            //font-size: 0.75rem;
+            // border-radius: 0.25rem;
+            // font-weight: bold;
+            //padding: 0.35rem .75rem;
+            // cursor: pointer;
+        }
+    }
+}
+
+
 // Media query for very small screens (mobile)
 @media screen and (max-width: 500px) and (max-height: 500px) {}
 
 
 // Media queries for mobile content (landscape low height)
-@media screen and (max-height: 351px) and (min-width: 501px) and (max-width: 1000px) {
+@media screen and (max-height: 351px) and (min-width: 500px) and (max-width: 1000px) {
 
     // Main content
     .main_container {
@@ -244,7 +351,7 @@
 
 
 // Media queries for mobile content (landscape)
-@media screen and (min-height: 351px) and (max-height: 650px) and (min-width: 501px) and (max-width: 1000px) {
+@media screen and (min-height: 351px) and (max-height: 650px) and (min-width: 500px) and (max-width: 1000px) {
 
     // Main content
     .main_container {
