--- a/src/components/Navbar/_media.scss
+++ b/src/components/Navbar/_media.scss
@@ -44,6 +44,52 @@
 }
 
 
+// Media query for very small screens (mobile)
+@media screen and (max-width: 500px) and (max-height: 500px) {
+
+    // Navbar content
+    .navbar_container {
+        // color: var(--header-color);
+        // display: flex;
+        justify-content: flex-start;
+        // align-items: center;
+        // width: 100%;
+        // border-bottom: .01rem solid var(--header-border-color);
+        padding: .25rem .5rem;
+
+        .navbar_menu_container {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            font-size: .85rem;
+            // cursor: pointer;
+        }
+
+        .navbar_title {
+            margin: 0;
+            font-size: 1.3rem;
+            // font-weight: bolder;
+            // font-family: 'Volkhov', serif;
+            // letter-spacing: -.15rem;
+            margin-left: .75rem;
+        }
+
+        .navbar_icons_container {
+            // display: flex;
+            // align-items: center;
+            justify-content: flex-end;
+            width: inherit;
+            gap: .4rem;
+            font-size: 1.05rem;
+
+            // .navbar_icon_container {
+            //     cursor: pointer;
+            // }
+        }
+    }
+}
+
+
 // Media queries for mobile content (landscape)
 @media screen and (max-height: 650px) and (min-width: 500px) and (max-width: 1000px) {
 
