--- a/src/components/ExtraMenu/_media.scss
+++ b/src/components/ExtraMenu/_media.scss
@@ -150,6 +150,159 @@
 }
 
 
+// // Media query for very small screens (mobile)
+// @media screen and (max-width: 500px) and (max-height: 500px) {
+
+//     // Help Pop Up content
+//     .extramenu_popup_container {
+//         // position: absolute;
+//         width: 100%;
+//         //height: 75%;
+//         height: fit-content;
+//         max-height: unset;
+//         top: 7.5%;
+//         //left: 0%;
+//         //width: 24.5%;
+//         //height: 66%;
+//         //height: fit-content;
+//         //max-height: 66%;
+//         // border: 1px solid var(--popup-border-color);
+//         // background-color: var(--popup-bg-color);
+//         // display: flex;
+//         // align-items: center;
+//         // flex-direction: column;
+//         // justify-content: center;
+//         gap: 0rem;
+//         // box-shadow: 3px 5px 5px var(--extra-menu-box-shadow-color);
+//         // border-radius: .5rem;
+//         padding-top: 1rem;
+
+//         // @keyframes slideIn {
+//         //     0% {
+//         //         translate: -75% 0;
+//         //         opacity: 0;
+//         //     }
+
+//         //     100% {
+//         //         translate: 0 0;
+//         //         opacity: 1;
+//         //     }
+//         // }
+
+//         // animation: slideIn .2s ease 0s;
+
+//         .extramenu_popup_games {
+//             // color: var(--keyboard-letter-text-color);
+//             // width: 100%;
+//             // display: flex;
+//             // flex-direction: column;
+//             // align-items: flex-start;
+//             // justify-content: center;
+//             gap: .5rem;
+//             padding-bottom: 0rem;
+
+//             .extramenu_popup_games_item {
+//                 // display: flex;
+//                 // flex-direction: column;
+//                 // justify-content: center;
+//                 width: 100%;
+//                 gap: .15rem;
+
+//                 &:nth-child(1) {
+//                     // border-bottom: .01rem solid var(--extra-menu-border-color);
+//                 }
+
+//                 &:nth-child(2) {
+//                     padding-top: .15rem;
+//                 }
+
+//                 &>h6 {
+//                     // font-weight: bold;
+//                     // text-transform: uppercase;
+//                     font-size: .55rem;
+//                     // margin: 0;
+//                     padding: 0 .25rem 0 .5rem;
+//                 }
+
+//                 .games_item_clickable {
+//                     // display: flex;
+//                     // align-items: center;
+//                     // color: var(--keyboard-letter-text-color);
+//                     // text-decoration: none;
+//                     gap: .4rem;
+//                     // transition: all .1s ease-in-out;
+//                     // cursor: pointer;
+//                     padding: .75rem;
+//                     // border-radius: .15rem;
+//                     margin-bottom: .15rem;
+
+//                     .games_item_icon_container {
+//                         // display: flex;
+//                         // align-items: center;
+//                         // justify-content: center;
+//                         width: 1rem;
+
+//                         i {
+//                             font-size: .875rem;
+//                             // color: var(--tile-correct-color);
+//                         }
+//                     }
+
+//                     &>p {
+//                         font-size: .65rem;
+//                         // margin: 0;
+//                         letter-spacing: .015rem;
+//                     }
+
+//                     &:hover {
+//                         background-color: initial;
+//                     }
+//                 }
+//             }
+//         }
+
+//         .extramenu_popup_footer_content {
+//             // border-top: .01rem solid var(--extra-menu-border-color);
+//             // width: 90%;
+//             // display: flex;
+//             // align-items: center;
+//             // justify-content: center;
+//             padding-top: .1rem;
+//         }
+
+//         .extramenu_popup_exit_button {
+//             // position: absolute;
+//             top: .5%;
+//             right: 3%;
+//             font-size: .85rem;
+//             padding-bottom: 0;
+//             // background-color: var(--popup-bg-color);
+//             // color: var(--keyboard-letter-text-color);
+//             // border: none;
+//             // cursor: pointer;
+//         }
+
+//         // &.extramenu_popup_container_hide {
+
+//         //     @keyframes slideOut {
+//         //         0% {
+//         //             translate: 0 0;
+//         //             opacity: 1;
+//         //         }
+
+//         //         100% {
+//         //             translate: -75% 0%;
+//         //             opacity: 0;
+//         //         }
+//         //     }
+
+//         //     animation: slideOut .2s ease 0s;
+//         //     animation-fill-mode: forwards;
+//         // }
+//     }
+// }
+
+// For 300px height
 // Media query for very small screens (mobile)
 @media screen and (max-width: 500px) and (max-height: 500px) {
 
@@ -160,7 +313,7 @@
         //height: 75%;
         height: fit-content;
         max-height: unset;
-        top: 7.5%;
+        top: 9.5%;
         //left: 0%;
         //width: 24.5%;
         //height: 66%;
@@ -206,22 +359,22 @@
                 // flex-direction: column;
                 // justify-content: center;
                 width: 100%;
-                gap: .15rem;
+                gap: .1rem;
 
                 &:nth-child(1) {
                     // border-bottom: .01rem solid var(--extra-menu-border-color);
                 }
 
                 &:nth-child(2) {
-                    padding-top: .15rem;
+                    padding-top: .1rem;
                 }
 
                 &>h6 {
                     // font-weight: bold;
                     // text-transform: uppercase;
-                    font-size: .55rem;
+                    font-size: .5rem;
                     // margin: 0;
-                    padding: 0 .25rem 0 .5rem;
+                    padding: 0 .15rem 0 .5rem;
                 }
 
                 .games_item_clickable {
@@ -232,26 +385,26 @@
                     gap: .4rem;
                     // transition: all .1s ease-in-out;
                     // cursor: pointer;
-                    padding: .75rem;
+                    padding: .65rem;
                     // border-radius: .15rem;
-                    margin-bottom: .15rem;
+                    margin-bottom: .1rem;
 
                     .games_item_icon_container {
                         // display: flex;
                         // align-items: center;
                         // justify-content: center;
-                        width: 1rem;
+                        width: .9rem;
 
                         i {
-                            font-size: .875rem;
+                            font-size: .825rem;
                             // color: var(--tile-correct-color);
                         }
                     }
 
                     &>p {
-                        font-size: .65rem;
+                        font-size: .6rem;
                         // margin: 0;
-                        letter-spacing: .015rem;
+                        letter-spacing: .01rem;
                     }
 
                     &:hover {
@@ -273,8 +426,8 @@
         .extramenu_popup_exit_button {
             // position: absolute;
             top: .5%;
-            right: 3%;
-            font-size: .85rem;
+            right: 1.5%;
+            font-size: .75rem;
             padding-bottom: 0;
             // background-color: var(--popup-bg-color);
             // color: var(--keyboard-letter-text-color);
