--- a/src/components/HelpPopUp/_media.scss
+++ b/src/components/HelpPopUp/_media.scss
@@ -534,13 +534,280 @@
 }
 
 
+// // Media query for very small screens (mobile)
+// @media screen and (max-width: 500px) and (max-height: 500px) {
+
+//     // Help Pop Up content
+//     .help_popup_container {
+//         // position: absolute;
+
+//         top: unset;
+//         bottom: 0;
+//         left: 0;
+//         width: 100%;
+//         //height: 75%;
+//         height: fit-content;
+
+//         // top: 19.3%;
+//         // left: 33.75%;
+//         // width: 32.5%;
+//         // height: 70%;
+//         //height: fit-content;
+//         // border: 1px solid var(--popup-border-color);
+//         // background-color: var(--popup-bg-color);
+//         // display: flex;
+//         // align-items: flex-start;
+//         // flex-direction: column;
+//         justify-content: center;
+//         gap: .5rem;
+//         //gap: 2rem;
+//         // box-shadow: 0 0 10px 1000px var(--popup-box-shadow-color);
+//         // border-radius: .5rem;
+//         padding: .5rem;
+
+//         // @keyframes slideIn {
+//         //     0% {
+//         //         translate: 0 7.5%;
+//         //         opacity: 0;
+//         //     }
+
+//         //     100% {
+//         //         translate: 0 0;
+//         //         opacity: 1;
+//         //     }
+//         // }
+
+//         // animation: slideIn .2s ease 0s;
+
+//         .help_popup_title {
+//             // color: var(--keyboard-letter-text-color);
+//             // text-transform: capitalize;
+//             // margin: 0;
+//             font-size: .85rem;
+//             // font-weight: bolder;
+//             // font-family: 'Volkhov', serif;
+//             // letter-spacing: -.05rem;
+//             // word-spacing: .05rem;
+//         }
+
+//         .help_popup_subtitle {
+//             // color: var(--keyboard-letter-text-color);
+//             // margin: 0;
+//             font-size: .625rem;
+//             // font-weight: lighter;
+//         }
+
+//         .help_popup_description_list {
+//             color: var(--keyboard-letter-text-color);
+//             // margin: 0;
+//             padding: 0 0 0 .75rem;
+
+//             li {
+//                 padding-top: .2rem;
+//                 font-size: .615rem;
+//                 line-height: .8rem;
+//                 // font-weight: 200;
+//             }
+//         }
+
+//         .help_popup_examples_container {
+//             // display: flex;
+//             // flex-direction: column;
+//             // justify-content: flex-start;
+//             gap: .5rem;
+
+//             h6 {
+//                 font-size: .6rem;
+//                 // color: var(--keyboard-letter-text-color);
+//                 // margin: 0;
+//                 // font-weight: bold;
+//             }
+
+//             .help_popup_example_items_container {
+//                 display: flex;
+//                 flex-direction: column;
+//                 gap: .25rem;
+
+//                 .help_popup_example_item {
+//                     // display: flex;
+//                     // flex-direction: column;
+//                     // align-items: flex-start;
+//                     // justify-content: flex-start;
+//                     gap: .15rem;
+//                     padding-bottom: .25rem;
+
+//                     .help_popup_example_tiles {
+//                         // display: flex;
+//                         // align-items: flex-start;
+//                         // justify-content: flex-start;
+//                         gap: .2rem;
+
+//                         .popup_example_tile {
+//                             // background-color: var(--app-bg-color);
+//                             width: 1rem;
+//                             height: 1rem;
+//                             // display: flex;
+//                             // align-items: center;
+//                             // justify-content: center;
+//                             // text-transform: uppercase;
+//                             font-size: .7rem;
+//                             // border: .1rem solid var(--tile-hightlighted-border-color);
+//                             // font-weight: bold;
+//                             // transition: all .05s ease-in-out;
+//                             // color: var(--keyboard-letter-text-color);
+
+//                             // @keyframes flipHelpTile {
+//                             //     0% {
+//                             //         rotate: x 0deg;
+//                             //     }
+
+//                             //     47.5% {
+//                             //         rotate: x 90deg;
+//                             //     }
+
+//                             //     52.5% {
+//                             //         rotate: x 90deg;
+//                             //     }
+
+//                             //     100% {
+//                             //         rotate: x 0deg;
+//                             //         border: none;
+//                             //         color: var(--tile-text-color);
+//                             //     }
+//                             // }
+
+//                             // &.popup_example_tile_green {
+//                             //     @keyframes turnHelpTileToGreen {
+//                             //         0% {
+//                             //             background-color: var(--app-bg-color);
+//                             //         }
+
+//                             //         25% {
+//                             //             background-color: var(--app-bg-color);
+//                             //         }
+
+//                             //         50% {
+//                             //             background-color: var(--tile-correct-color);
+//                             //         }
+
+//                             //         100% {
+//                             //             background-color: var(--tile-correct-color);
+//                             //         }
+//                             //     }
+
+//                             //     animation: flipHelpTile .6s ease-in-out,
+//                             //     turnHelpTileToGreen .85s ease-in-out;
+//                             //     animation-fill-mode: forwards;
+//                             // }
+
+//                             // &.popup_example_tile_yellow {
+//                             //     @keyframes turnHelpTileToYellow {
+//                             //         0% {
+//                             //             background-color: var(--app-bg-color);
+//                             //         }
+
+//                             //         25% {
+//                             //             background-color: var(--app-bg-color);
+//                             //         }
+
+//                             //         50% {
+//                             //             background-color: var(--tile-present-color);
+//                             //         }
+
+//                             //         100% {
+//                             //             background-color: var(--tile-present-color);
+//                             //         }
+//                             //     }
+
+//                             //     animation: flipHelpTile .6s ease-in-out,
+//                             //     turnHelpTileToYellow .85s ease-in-out;
+//                             //     animation-fill-mode: forwards;
+//                             // }
+
+//                             // &.popup_example_tile_grey {
+//                             //     @keyframes turnHelpTileToGrey {
+//                             //         0% {
+//                             //             background-color: var(--app-bg-color);
+//                             //         }
+
+//                             //         25% {
+//                             //             background-color: var(--app-bg-color);
+//                             //         }
+
+//                             //         50% {
+//                             //             background-color: var(--tile-wrong-color);
+//                             //             color: var(--keyboard-letter-checked-color);
+//                             //         }
+
+//                             //         100% {
+//                             //             background-color: var(--tile-wrong-color);
+//                             //             color: var(--keyboard-letter-checked-color);
+//                             //         }
+//                             //     }
+
+//                             //     animation: flipHelpTile .6s ease-in-out,
+//                             //     turnHelpTileToGrey .85s ease-in-out;
+//                             //     animation-fill-mode: forwards;
+//                             // }
+
+//                             // .popup_example_letter {
+//                             //     margin: 0;
+//                             // }
+//                         }
+//                     }
+
+//                     &>p {
+//                         span {
+//                             font-size: .6rem;
+//                             // font-weight: bold;
+//                         }
+
+//                         font-size: .575rem;
+//                         // margin: 0;
+//                         // color: var(--keyboard-letter-text-color);
+//                     }
+//                 }
+//             }
+//         }
+
+//         .help_popup_exit_button {
+//             // position: absolute;
+//             top: 1.5%;
+//             right: 3%;
+//             font-size: .95rem;
+//             // background-color: var(--settings-popup-bg-color);
+//             // color: var(--keyboard-letter-text-color);
+//             // border: none;
+//             // cursor: pointer;
+//         }
+
+//         // &.help_popup_container_hide {
+
+//         //     @keyframes slideOut {
+//         //         0% {
+//         //             translate: 0 0;
+//         //             opacity: 1;
+//         //         }
+
+//         //         100% {
+//         //             translate: 0 7.5%;
+//         //             opacity: 0;
+//         //         }
+//         //     }
+
+//         //     animation: slideOut .2s ease 0s;
+//         //     animation-fill-mode: forwards;
+//         // }
+//     }
+// }
+
+// For 300px height
 // Media query for very small screens (mobile)
 @media screen and (max-width: 500px) and (max-height: 500px) {
 
     // Help Pop Up content
     .help_popup_container {
         // position: absolute;
-
         top: unset;
         bottom: 0;
         left: 0;
@@ -559,11 +826,11 @@
         // align-items: flex-start;
         // flex-direction: column;
         justify-content: center;
-        gap: .5rem;
+        gap: .25rem;
         //gap: 2rem;
         // box-shadow: 0 0 10px 1000px var(--popup-box-shadow-color);
         // border-radius: .5rem;
-        padding: .5rem;
+        padding: .25rem .4rem;
 
         // @keyframes slideIn {
         //     0% {
@@ -583,7 +850,7 @@
             // color: var(--keyboard-letter-text-color);
             // text-transform: capitalize;
             // margin: 0;
-            font-size: .85rem;
+            font-size: .8rem;
             // font-weight: bolder;
             // font-family: 'Volkhov', serif;
             // letter-spacing: -.05rem;
@@ -593,7 +860,7 @@
         .help_popup_subtitle {
             // color: var(--keyboard-letter-text-color);
             // margin: 0;
-            font-size: .625rem;
+            font-size: .575rem;
             // font-weight: lighter;
         }
 
@@ -603,8 +870,8 @@
             padding: 0 0 0 .75rem;
 
             li {
-                padding-top: .2rem;
-                font-size: .615rem;
+                padding-top: .15rem;
+                font-size: .565rem;
                 line-height: .8rem;
                 // font-weight: 200;
             }
@@ -614,10 +881,10 @@
             // display: flex;
             // flex-direction: column;
             // justify-content: flex-start;
-            gap: .5rem;
+            gap: .4rem;
 
             h6 {
-                font-size: .6rem;
+                font-size: .55rem;
                 // color: var(--keyboard-letter-text-color);
                 // margin: 0;
                 // font-weight: bold;
@@ -626,31 +893,31 @@
             .help_popup_example_items_container {
                 display: flex;
                 flex-direction: column;
-                gap: .25rem;
+                gap: .2rem;
 
                 .help_popup_example_item {
                     // display: flex;
                     // flex-direction: column;
                     // align-items: flex-start;
                     // justify-content: flex-start;
-                    gap: .15rem;
-                    padding-bottom: .25rem;
+                    gap: .1rem;
+                    padding-bottom: .2rem;
 
                     .help_popup_example_tiles {
                         // display: flex;
                         // align-items: flex-start;
                         // justify-content: flex-start;
-                        gap: .2rem;
+                        gap: .15rem;
 
                         .popup_example_tile {
                             // background-color: var(--app-bg-color);
-                            width: 1rem;
-                            height: 1rem;
+                            width: .9rem;
+                            height: .9rem;
                             // display: flex;
                             // align-items: center;
                             // justify-content: center;
                             // text-transform: uppercase;
-                            font-size: .7rem;
+                            font-size: .6rem;
                             // border: .1rem solid var(--tile-hightlighted-border-color);
                             // font-weight: bold;
                             // transition: all .05s ease-in-out;
@@ -758,11 +1025,11 @@
 
                     &>p {
                         span {
-                            font-size: .6rem;
+                            font-size: .55rem;
                             // font-weight: bold;
                         }
 
-                        font-size: .575rem;
+                        font-size: .525rem;
                         // margin: 0;
                         // color: var(--keyboard-letter-text-color);
                     }
@@ -772,9 +1039,9 @@
 
         .help_popup_exit_button {
             // position: absolute;
-            top: 1.5%;
-            right: 3%;
-            font-size: .95rem;
+            top: .5%;
+            right: 1.5%;
+            font-size: .75rem;
             // background-color: var(--settings-popup-bg-color);
             // color: var(--keyboard-letter-text-color);
             // border: none;
