--- a/src/components/SettingsPopUp/_media.scss
+++ b/src/components/SettingsPopUp/_media.scss
@@ -556,6 +556,287 @@
 }
 
 
+// // Media query for very small screens (mobile)
+// @media screen and (max-width: 500px) and (max-height: 500px) {
+
+//     // Settings Pop Up content
+//     .settings_popup_container {
+//         // position: absolute;
+//         //top: 0;
+//         top: unset;
+//         bottom: 0;
+//         left: 0;
+//         width: 100%;
+//         //height: 75%;
+//         height: fit-content;
+//         justify-content: center;
+//         gap: .5rem;
+//         padding: .5rem 0;
+
+//         // border: 1px solid var(--popup-border-color);
+//         // background-color: var(--popup-bg-color);
+//         // display: flex;
+//         // align-items: center;
+//         // flex-direction: column;
+//         //justify-content: space-evenly;
+//         // box-shadow: 0 0 10px 1000px var(--popup-box-shadow-color);
+//         // border-radius: .5rem;
+
+//         // @keyframes slideIn {
+//         //     0% {
+//         //         translate: 0 7.5%;
+//         //         opacity: 0;
+//         //     }
+
+//         //     100% {
+//         //         translate: 0 0;
+//         //         opacity: 1;
+//         //     }
+//         // }
+
+//         // animation: slideIn .2s ease 0s;
+
+//         .settings_popup_title {
+//             // color: var(--keyboard-letter-text-color);
+//             // text-transform: uppercase;
+//             // text-align: center;
+//             // font-weight: bold;
+//             letter-spacing: .045rem;
+//             font-size: .7rem;
+//         }
+
+//         .settings_popup_settings {
+//             // display: flex;
+//             // flex-direction: column;
+//             // align-items: center;
+//             // justify-content: center;
+//             // width: 100%;
+//             padding: 0 .55rem;
+//             // color: var(--keyboard-letter-text-color);
+
+//             .singular_setting_container {
+//                 // width: 100%;
+//                 // display: flex;
+//                 // align-items: center;
+//                 // justify-content: space-between;
+//                 // border-bottom: 1px solid var(--tile-wrong-color);
+
+//                 .singular_setting_text {
+//                     // width: 65%;
+//                     padding: .5rem 0;
+
+//                     h4 {
+//                         // margin: 0;
+//                         // font-weight: lighter;
+//                         font-size: .75rem;
+//                     }
+
+//                     p {
+//                         // margin: 0;
+//                         font-size: .55rem;
+//                         // color: var(--popup-text-description-color);
+//                     }
+//                 }
+
+//                 .singular_setting_toggler {
+//                     width: 25%;
+//                     height: fit-content;
+//                     // display: flex;
+//                     // align-items: center;
+//                     // justify-content: flex-end;
+//                     gap: .5rem;
+//                     font-size: .75rem;
+
+//                     .singular_setting_toggler_decrement {
+//                         // background-color: inherit;
+//                         // color: var(--keyboard-letter-checked-color);
+//                         // border: none;
+//                         // border-radius: .25rem;
+//                         // background-color: var(--tile-hightlighted-border-color);
+//                         width: .75rem;
+//                         height: .75rem;
+//                         font-size: .625rem;
+//                         // display: flex;
+//                         // align-items: center;
+//                         // justify-content: center;
+//                         // align-self: flex-end;
+//                         // cursor: pointer;
+//                         // transition: all .1s ease-in-out;
+
+//                         &:active {
+//                             translate: 0 12%;
+//                         }
+//                     }
+
+//                     .singular_setting_toggler_increment {
+//                         // background-color: inherit;
+//                         // color: var(--keyboard-letter-checked-color);
+//                         // border: none;
+//                         // border-radius: .25rem;
+//                         // background-color: var(--tile-hightlighted-border-color);
+//                         width: .75rem;
+//                         height: .75rem;
+//                         font-size: .625rem;
+//                         // display: flex;
+//                         // align-items: center;
+//                         // justify-content: center;
+//                         // align-self: flex-start;
+//                         // cursor: pointer;
+//                         // transition: all .1s ease-in-out;
+
+//                         &:active {
+//                             translate: 0 -12%;
+//                         }
+//                     }
+
+//                     .singular_setting_toggler_area {
+//                         width: 1.5rem;
+//                         height: .825rem;
+//                         // background-color: var(--tile-hightlighted-border-color);
+//                         // border-radius: 2rem;
+//                         // position: relative;
+//                         // cursor: pointer;
+//                         // transition: all .2s ease-in-out;
+
+//                         // &.toggler_area_on {
+//                         //     background-color: var(--tile-correct-color);
+//                         // }
+
+//                         // &::before {
+//                         //     content: '';
+//                         //     position: absolute;
+//                         //     top: 9%;
+//                         //     left: 5%;
+//                         //     width: 50%;
+//                         //     height: 80%;
+//                         //     background-color: var(--keyboard-letter-checked-color);
+//                         //     border-radius: 2rem;
+//                         //     translate: 77.5% 0;
+//                         //     transition: all .2s ease-in-out;
+//                         // }
+
+//                         // &.toggler_area_off::before {
+//                         //     translate: 0% 0%;
+//                         // }
+//                     }
+
+//                     &.singular_setting_toggler_disabled {
+
+//                         &::after {
+//                             font-size: .425rem;
+//                             line-height: .525rem;
+//                             padding: .1rem;
+//                             width: 90%;
+//                         }
+//                     }
+//                     //     opacity: .35;
+//                     //     position: relative;
+
+//                     //     &::before {
+//                     //         content: '';
+//                     //         position: absolute;
+//                     //         top: 0;
+//                     //         left: 0;
+//                     //         width: 100%;
+//                     //         height: 100%;
+//                     //     }
+//                     // }
+//                 }
+//             }
+//         }
+
+//         .settings_popup_reset_button_container {
+//             width: 45%;
+//             text-align: center;
+//             align-self: flex-end;
+//             margin-right: .5rem;
+
+//             button {
+//                 padding: .2rem .5rem;
+//                 // border-radius: .25rem;
+//                 // background-color: var(--tile-present-color);
+//                 // color: var(--popup-bg-color);
+//                 // border: .05rem solid var(--popup-text-description-color);
+//                 font-size: .575rem;
+//                 // font-weight: bold;
+//                 // cursor: pointer;
+//             }
+//         }
+
+//         .settings_popup_notification_area {
+//             position: absolute;
+//             bottom: 2%;
+//             left: 3%;
+//             width: 40%;
+//             height: 7.5%;
+//             // color: var(--keyboard-letter-checked-color);
+//             // background-color: var(--settings-popup-notification-bg-color);
+//             // border-radius: .25rem;
+//             font-size: .5rem;
+//             line-height: .55rem;
+//             padding: .1rem;
+//             // display: flex;
+//             // align-items: center;
+//             // justify-content: center;
+//             // text-align: center;
+
+//             // @keyframes glow {
+//             //     0% {
+//             //         box-shadow: 0 0 0rem 0rem var(--settings-popup-notification-box-shadow-color);
+//             //     }
+
+//             //     25% {
+//             //         box-shadow: 0 0 .85rem .3rem var(--settings-popup-notification-box-shadow-color);
+//             //     }
+
+//             //     50% {
+//             //         box-shadow: 0 0 0.15rem .05rem var(--settings-popup-notification-box-shadow-color);
+//             //     }
+
+//             //     75% {
+//             //         box-shadow: 0 0 .85rem .3rem var(--settings-popup-notification-box-shadow-color);
+//             //     }
+
+//             //     100% {
+//             //         box-shadow: 0 0 0rem 0rem var(--settings-popup-notification-box-shadow-color);
+//             //     }
+//             // }
+
+//             // animation: glow 1.5s ease-in-out;
+//         }
+
+//         .settings_popup_exit_button {
+//             // position: absolute;
+//             top: 1.5%;
+//             // right: 3%;
+//             font-size: .95rem;
+//             // background-color: var(--popup-bg-color);
+//             // color: var(--keyboard-letter-text-color);
+//             // border: none;
+//             // cursor: pointer;
+//         }
+
+//         // &.settings_popup_container_hide {
+
+//         //     @keyframes slideOut {
+//         //         0% {
+//         //             translate: 0 0;
+//         //             opacity: 1;
+//         //         }
+
+//         //         100% {
+//         //             translate: 0 7.5%;
+//         //             opacity: 0;
+//         //         }
+//         //     }
+
+//         //     animation: slideOut .2s ease 0s;
+//         //     animation-fill-mode: forwards;
+//         // }
+//     }
+// }
+
+// For 300px height
 // Media query for very small screens (mobile)
 @media screen and (max-width: 500px) and (max-height: 500px) {
 
@@ -570,8 +851,8 @@
         //height: 75%;
         height: fit-content;
         justify-content: center;
-        gap: .5rem;
-        padding: .5rem 0;
+        gap: .25rem;
+        padding: .25rem 0;
 
         // border: 1px solid var(--popup-border-color);
         // background-color: var(--popup-bg-color);
@@ -602,7 +883,7 @@
             // text-align: center;
             // font-weight: bold;
             letter-spacing: .045rem;
-            font-size: .7rem;
+            font-size: .6rem;
         }
 
         .settings_popup_settings {
@@ -611,7 +892,7 @@
             // align-items: center;
             // justify-content: center;
             // width: 100%;
-            padding: 0 .55rem;
+            padding: 0 .25rem;
             // color: var(--keyboard-letter-text-color);
 
             .singular_setting_container {
@@ -623,17 +904,18 @@
 
                 .singular_setting_text {
                     // width: 65%;
-                    padding: .5rem 0;
+                    padding: .375rem 0;
 
                     h4 {
                         // margin: 0;
                         // font-weight: lighter;
-                        font-size: .75rem;
+                        font-size: .625rem;
                     }
 
                     p {
                         // margin: 0;
-                        font-size: .55rem;
+                        font-size: .485rem;
+                        line-height: .625rem;
                         // color: var(--popup-text-description-color);
                     }
                 }
@@ -644,8 +926,8 @@
                     // display: flex;
                     // align-items: center;
                     // justify-content: flex-end;
-                    gap: .5rem;
-                    font-size: .75rem;
+                    gap: .35rem;
+                    font-size: .65rem;
 
                     .singular_setting_toggler_decrement {
                         // background-color: inherit;
@@ -653,9 +935,9 @@
                         // border: none;
                         // border-radius: .25rem;
                         // background-color: var(--tile-hightlighted-border-color);
-                        width: .75rem;
-                        height: .75rem;
-                        font-size: .625rem;
+                        width: .625rem;
+                        height: .625rem;
+                        font-size: .5rem;
                         // display: flex;
                         // align-items: center;
                         // justify-content: center;
@@ -674,9 +956,9 @@
                         // border: none;
                         // border-radius: .25rem;
                         // background-color: var(--tile-hightlighted-border-color);
-                        width: .75rem;
-                        height: .75rem;
-                        font-size: .625rem;
+                        width: .625rem;
+                        height: .625rem;
+                        font-size: .5rem;
                         // display: flex;
                         // align-items: center;
                         // justify-content: center;
@@ -690,8 +972,8 @@
                     }
 
                     .singular_setting_toggler_area {
-                        width: 1.5rem;
-                        height: .825rem;
+                        width: 1.35rem;
+                        height: .725rem;
                         // background-color: var(--tile-hightlighted-border-color);
                         // border-radius: 2rem;
                         // position: relative;
@@ -723,8 +1005,8 @@
                     &.singular_setting_toggler_disabled {
 
                         &::after {
-                            font-size: .425rem;
-                            line-height: .525rem;
+                            font-size: .325rem;
+                            line-height: .475rem;
                             padding: .1rem;
                             width: 90%;
                         }
@@ -749,15 +1031,15 @@
             width: 45%;
             text-align: center;
             align-self: flex-end;
-            margin-right: .5rem;
+            margin-right: .1rem;
 
             button {
-                padding: .2rem .5rem;
+                padding: .15rem .35rem;
                 // border-radius: .25rem;
                 // background-color: var(--tile-present-color);
                 // color: var(--popup-bg-color);
                 // border: .05rem solid var(--popup-text-description-color);
-                font-size: .575rem;
+                font-size: .55rem;
                 // font-weight: bold;
                 // cursor: pointer;
             }
@@ -765,16 +1047,17 @@
 
         .settings_popup_notification_area {
             position: absolute;
-            bottom: 2%;
+            bottom: 1.5%;
             left: 3%;
-            width: 40%;
+            width: 45%;
             height: 7.5%;
             // color: var(--keyboard-letter-checked-color);
             // background-color: var(--settings-popup-notification-bg-color);
             // border-radius: .25rem;
-            font-size: .5rem;
+            font-size: .435rem;
             line-height: .55rem;
             padding: .1rem;
+            letter-spacing: .015rem;
             // display: flex;
             // align-items: center;
             // justify-content: center;
@@ -807,9 +1090,9 @@
 
         .settings_popup_exit_button {
             // position: absolute;
-            top: 1.5%;
-            // right: 3%;
-            font-size: .95rem;
+            top: .5%;
+            right: 1.5%;
+            font-size: .75rem;
             // background-color: var(--popup-bg-color);
             // color: var(--keyboard-letter-text-color);
             // border: none;
