--- a/src/components/StatsPopUp/_media.scss
+++ b/src/components/StatsPopUp/_media.scss
@@ -187,6 +187,195 @@
 }
 
 
+// // Media query for very small screens (mobile)
+// @media screen and (max-width: 500px) and (max-height: 500px) {
+
+//     // Stats Pop Up content
+//     .stats_popup_container {
+//         // position: absolute;
+//         top: unset;
+//         bottom: 0;
+//         left: 0;
+//         width: 100%;
+//         //height: 75%;
+//         //padding: 0rem 0;
+//         //gap: 0;
+
+//         height: fit-content;
+//         justify-content: center;
+//         gap: 1rem;
+//         padding: .5rem 0;
+//         // border: 1px solid var(--popup-border-color);
+//         // background-color: var(--popup-bg-color);
+//         // display: flex;
+//         // align-items: center;
+//         // flex-direction: column;
+//         //justify-content: space-evenly;
+//         //justify-content: space-evenly;
+//         //gap: 2rem;
+//         // box-shadow: 0 0 10px 1000px var(--popup-box-shadow-color);
+//         // border-radius: .5rem;
+
+//         // @keyframes slideIn {
+//         //     0% {
+//         //         translate: 0 7.5%;
+//         //         opacity: 0;
+//         //     }
+
+//         //     100% {
+//         //         translate: 0 0;
+//         //         opacity: 1;
+//         //     }
+//         // }
+
+//         // animation: slideIn .2s ease 0s;
+
+//         .stats_popup_stats_numbers {
+//             // display: flex;
+//             // flex-direction: column;
+//             // align-items: center;
+//             // justify-content: center;
+//             gap: .5rem;
+//             // width: 100%;
+//             padding: 0 .25rem;
+//             // color: var(--keyboard-letter-text-color);
+
+//             .stats_popup_stats_numbers_title {
+//                 // color: var(--keyboard-letter-text-color);
+//                 // text-transform: uppercase;
+//                 // text-align: center;
+//                 // font-weight: bold;
+//                 letter-spacing: .05rem;
+//                 font-size: .7rem;
+//             }
+
+//             .stats_numbers_row_container {
+//                 // display: flex;
+//                 // align-items: flex-start;
+//                 // justify-content: center;
+//                 // width: 100%;
+//                 gap: .5rem;
+
+//                 .singular_stat_container {
+//                     // display: flex;
+//                     // flex-direction: column;
+//                     // align-items: center;
+//                     // justify-content: center;
+//                     width: 17%;
+
+
+//                     .singular_stat_number {
+//                         font-size: .9rem;
+//                         // font-weight: 400;
+//                         // margin: 0;
+//                     }
+
+//                     .singular_stat_text {
+//                         // margin: 0;
+//                         // text-align: center;
+//                         font-size: .5rem;
+//                         line-height: .5rem;
+//                     }
+//                 }
+//             }
+//         }
+
+//         .stats_popup_stats_graph {
+//             // display: flex;
+//             // flex-direction: column;
+//             // align-items: center;
+//             // justify-content: center;
+//             // width: 100%;
+//             gap: .5rem;
+//             padding: 0 .5rem;
+//             // color: var(--keyboard-letter-text-color);
+
+//             .stats_popup_stats_graph_title {
+//                 // color: var(--keyboard-letter-text-color);
+//                 // text-transform: uppercase;
+//                 // text-align: center;
+//                 // font-weight: bold;
+//                 letter-spacing: .05rem;
+//                 font-size: .7rem;
+//             }
+
+//             .stats_graph_column_container {
+//                 // display: flex;
+//                 // flex-direction: column;
+//                 // justify-content: space-evenly;
+//                 gap: .175rem;
+//                 // width: 100%;
+
+//                 .singular_graph_line_container {
+//                     // display: flex;
+//                     // align-items: center;
+//                     // justify-content: flex-start;
+//                     gap: .4rem;
+//                     // width: 100%;
+
+//                     .singular_graph_number {
+//                         // margin: 0;
+//                         // width: 5%;
+//                         // display: flex;
+//                         // align-items: center;
+//                         // justify-content: flex-end;
+//                         // font-weight: bold;
+//                         font-size: .55rem;
+//                         // line-height: 1.15rem;
+//                         letter-spacing: .025rem;
+//                     }
+
+//                     .singular_graph_bar {
+//                         // display: flex;
+//                         // justify-content: flex-end;
+//                         padding-right: .1rem;
+//                         // background-color: var(--tile-wrong-color);
+
+//                         p {
+//                             // margin: 0;
+//                             // color: var(--tile-text-color);
+//                             padding-right: .2rem;
+//                             // font-weight: bold;
+//                             font-size: .535rem;
+//                             // line-height: 1.15rem;
+//                         }
+//                     }
+//                 }
+//             }
+//         }
+
+//         .stats_popup_exit_button {
+//             // position: absolute;
+//             top: 1.5%;
+//             // right: 3%;
+//             font-size: .95rem;
+//             // background-color: var(--popup-bg-color);
+//             // color: var(--keyboard-letter-text-color);
+//             // border: none;
+//             // cursor: pointer;
+//         }
+
+//         // &.stats_popup_container_hide {
+
+//         //     @keyframes slideOut {
+//         //         0% {
+//         //             translate: 0 0;
+//         //             opacity: 1;
+//         //         }
+
+//         //         100% {
+//         //             translate: 0 7.5%;
+//         //             opacity: 0;
+//         //         }
+//         //     }
+
+//         //     animation: slideOut .2s ease 0s;
+//         //     animation-fill-mode: forwards;
+//         // }
+//     }
+// }
+
+// For 300px height
 // Media query for very small screens (mobile)
 @media screen and (max-width: 500px) and (max-height: 500px) {
 
@@ -203,8 +392,8 @@
 
         height: fit-content;
         justify-content: center;
-        gap: 1rem;
-        padding: .5rem 0;
+        gap: .5rem;
+        padding: .25rem 0;
         // border: 1px solid var(--popup-border-color);
         // background-color: var(--popup-bg-color);
         // display: flex;
@@ -235,7 +424,7 @@
             // flex-direction: column;
             // align-items: center;
             // justify-content: center;
-            gap: .5rem;
+            gap: .25rem;
             // width: 100%;
             padding: 0 .25rem;
             // color: var(--keyboard-letter-text-color);
@@ -245,8 +434,8 @@
                 // text-transform: uppercase;
                 // text-align: center;
                 // font-weight: bold;
-                letter-spacing: .05rem;
-                font-size: .7rem;
+                letter-spacing: .045rem;
+                font-size: .6rem;
             }
 
             .stats_numbers_row_container {
@@ -265,7 +454,7 @@
 
 
                     .singular_stat_number {
-                        font-size: .9rem;
+                        font-size: .7rem;
                         // font-weight: 400;
                         // margin: 0;
                     }
@@ -273,8 +462,8 @@
                     .singular_stat_text {
                         // margin: 0;
                         // text-align: center;
-                        font-size: .5rem;
-                        line-height: .5rem;
+                        font-size: .4rem;
+                        line-height: .375rem;
                     }
                 }
             }
@@ -295,15 +484,15 @@
                 // text-transform: uppercase;
                 // text-align: center;
                 // font-weight: bold;
-                letter-spacing: .05rem;
-                font-size: .7rem;
+                letter-spacing: .045rem;
+                font-size: .6rem;
             }
 
             .stats_graph_column_container {
                 // display: flex;
                 // flex-direction: column;
-                // justify-content: space-evenly;
-                gap: .175rem;
+                //justify-content: space-evenly;
+                gap: .15rem;
                 // width: 100%;
 
                 .singular_graph_line_container {
@@ -311,6 +500,7 @@
                     // align-items: center;
                     // justify-content: flex-start;
                     gap: .4rem;
+                    //height: 1rem;
                     // width: 100%;
 
                     .singular_graph_number {
@@ -320,8 +510,8 @@
                         // align-items: center;
                         // justify-content: flex-end;
                         // font-weight: bold;
-                        font-size: .55rem;
-                        // line-height: 1.15rem;
+                        font-size: .45rem;
+                        line-height: .85rem;
                         letter-spacing: .025rem;
                     }
 
@@ -336,8 +526,8 @@
                             // color: var(--tile-text-color);
                             padding-right: .2rem;
                             // font-weight: bold;
-                            font-size: .535rem;
-                            // line-height: 1.15rem;
+                            font-size: .475rem;
+                            line-height: .85rem;
                         }
                     }
                 }
@@ -346,9 +536,9 @@
 
         .stats_popup_exit_button {
             // position: absolute;
-            top: 1.5%;
-            // right: 3%;
-            font-size: .95rem;
+            top: .5%;
+            right: 1.5%;
+            font-size: .75rem;
             // background-color: var(--popup-bg-color);
             // color: var(--keyboard-letter-text-color);
             // border: none;
